--- a/MeshTools.asmdef
+++ b/MeshTools.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "MeshCutter",
+    "name": "MeshTools",
     "rootNamespace": "",
     "references": [
         "GUID:d8b63aba1907145bea998dd612889d6b",
