--- a/Scripts/Tests/Tests.asmdef
+++ b/Scripts/Tests/Tests.asmdef
@@ -1,10 +1,11 @@
 {
     "name": "Tests",
+    "rootNamespace": "",
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "Unity.Mathematics",
-        "MeshCutter"
+        "MeshTools"
     ],
     "includePlatforms": [
         "Editor"
